--- a/CNN-Models.ipynb
+++ b/CNN-Models.ipynb
@@ -22,7 +22,8 @@
     "3. [CNN Model: Light from Scratch](#cnn-model-light-from-scratch)\n",
     "4. [CNN Model: Deep from Scratch](#cnn-model-deep-from-scratch)\n",
     "5. [CNN Model: Data Augmentation](#cnn-model-data-augmentation)\n",
-    "6. [CNN Model: Data Augmentation Fine Tuned](#cnn-model-data-augmentation-fine-tuned)"
+    "6. [CNN Model: Data Augmentation Fine Tuned](#cnn-model-data-augmentation-fine-tuned)\n",
+    "7. [CNN Model: Grayscale](#cnn-model-grayscale)"
    ]
   },
   {
@@ -1423,7 +1424,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **CNN Model: Greyscale**"
+    "## **CNN Model: Grayscale**"
    ]
   },
   {
@@ -1649,7 +1650,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **CNN Model: Greyscale Evaluation**"
+    "### **CNN Model: Grayscale Evaluation**"
    ]
   },
   {
@@ -1684,7 +1685,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### CNN Model Greyscale: Save and Load Model"
+    "#### CNN Model Grayscale: Save and Load Model"
    ]
   },
   {
@@ -1714,7 +1715,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **CNN Model: Greyscale Testing**"
+    "### **CNN Model: Grayscale Testing**"
    ]
   },
   {
