testing of images moved to evaluation notebook

--- a/CNN-Models-Evaluations.ipynb
+++ b/CNN-Models-Evaluations.ipynb
@@ -2,16 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import tensorflow as tf\n",
     "import json\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
     "from tensorflow.keras.models import load_model\n",
-    "from sklearn.metrics import classification_report, confusion_matrix, roc_curve, auc"
+    "from sklearn.metrics import classification_report, confusion_matrix, roc_curve, auc\n",
+    "from tensorflow.keras.preprocessing import image"
    ]
   },
   {
@@ -51,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -222,6 +224,59 @@
     "### **Conclusion**\n",
     "\n",
     "The training session results demonstrate a **good fit** for the model on the provided dataset. It effectively learns and generalizes patterns without overfitting or underfitting. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the model\n",
+    "scratch_model_light = load_model('scratch_model_light.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 5s 5s/step\n",
+      "Prediction for myImages/three2.png: three2\n",
+      "1/1 [==============================] - 0s 19ms/step\n",
+      "Prediction for myImages/rock.png: rock\n",
+      "1/1 [==============================] - 0s 20ms/step\n",
+      "Prediction for myImages/ok.jpg: call\n",
+      "1/1 [==============================] - 0s 19ms/step\n",
+      "Prediction for myImages/two_up_inverted.png: two_up_inverted\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Testing own images\n",
+    "class_names = ['call','dislike','fist','four','like','mute','ok','one','palm','peace','peace_inverted','rock','stop','stop_inverted','three','three2','two_up','two_up_inverted']\n",
+    "\n",
+    "def predict_gesture(model, img_path, class_names):\n",
+    "    img = image.load_img(img_path, target_size=(64, 64))\n",
+    "    img_array = image.img_to_array(img)\n",
+    "    img_array = tf.expand_dims(img_array, 0)  # Create batch dimension\n",
+    "\n",
+    "    predictions = model.predict(img_array)\n",
+    "    predicted_class = class_names[np.argmax(predictions)]\n",
+    "    return predicted_class\n",
+    "\n",
+    "gesture_images = ['myImages/three2.png',\n",
+    "                  'myImages/rock.png',\n",
+    "                  'myImages/ok.jpg',\n",
+    "                  'myImages/two_up_inverted.png']\n",
+    "\n",
+    "for img_path in gesture_images:\n",
+    "    predicted_gesture = predict_gesture(scratch_model_light, img_path, class_names)\n",
+    "    print(f\"Prediction for {img_path}: {predicted_gesture}\")"
    ]
   },
   {
@@ -414,10 +469,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Load the model\n",
+    "scratch_model_deep = load_model('scratch_model_deep.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 360ms/step\n",
+      "Prediction for myImages/three2.png: three2\n",
+      "1/1 [==============================] - 0s 19ms/step\n",
+      "Prediction for myImages/rock.png: rock\n",
+      "1/1 [==============================] - 0s 19ms/step\n",
+      "Prediction for myImages/ok.jpg: ok\n",
+      "1/1 [==============================] - 0s 19ms/step\n",
+      "Prediction for myImages/two_up_inverted.png: two_up_inverted\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Testing own images\n",
+    "class_names = ['call','dislike','fist','four','like','mute','ok','one','palm','peace','peace_inverted','rock','stop','stop_inverted','three','three2','two_up','two_up_inverted']\n",
+    "\n",
+    "def predict_gesture(model, img_path, class_names):\n",
+    "    img = image.load_img(img_path, target_size=(64, 64))\n",
+    "    img_array = image.img_to_array(img)\n",
+    "    img_array = tf.expand_dims(img_array, 0)  # Create batch dimension\n",
+    "\n",
+    "    predictions = model.predict(img_array)\n",
+    "    predicted_class = class_names[np.argmax(predictions)]\n",
+    "    return predicted_class\n",
+    "\n",
+    "gesture_images = ['myImages/three2.png',\n",
+    "                  'myImages/rock.png',\n",
+    "                  'myImages/ok.jpg',\n",
+    "                  'myImages/two_up_inverted.png']\n",
+    "\n",
+    "for img_path in gesture_images:\n",
+    "    predicted_gesture = predict_gesture(scratch_model_deep, img_path, class_names)\n",
+    "    print(f\"Prediction for {img_path}: {predicted_gesture}\")"
+   ]
   },
   {
    "cell_type": "markdown",
