data augmentation model added and evaluation visualization complete

--- a/CNN-Models.ipynb
+++ b/CNN-Models.ipynb
@@ -430,54 +430,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **CNN Model: Light from Scratch Testing**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 0s 413ms/step\n",
-      "Prediction for myImages/three2.png: three2\n",
-      "1/1 [==============================] - 0s 19ms/step\n",
-      "Prediction for myImages/rock.png: rock\n",
-      "1/1 [==============================] - 0s 19ms/step\n",
-      "Prediction for myImages/ok.jpg: call\n",
-      "1/1 [==============================] - 0s 19ms/step\n",
-      "Prediction for myImages/two_up_inverted.png: two_up_inverted\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Testing own images\n",
-    "def predict_gesture(model, img_path, class_names):\n",
-    "    img = image.load_img(img_path, target_size=(64, 64))\n",
-    "    img_array = image.img_to_array(img)\n",
-    "    img_array = tf.expand_dims(img_array, 0)  # Create batch dimension\n",
-    "\n",
-    "    predictions = model.predict(img_array)\n",
-    "    predicted_class = class_names[np.argmax(predictions)]\n",
-    "    return predicted_class\n",
-    "\n",
-    "gesture_images = ['myImages/three2.png',\n",
-    "                  'myImages/rock.png',\n",
-    "                  'myImages/ok.jpg',\n",
-    "                  'myImages/two_up_inverted.png']\n",
-    "\n",
-    "for img_path in gesture_images:\n",
-    "    predicted_gesture = predict_gesture(scratch_model_light, img_path, class_names)\n",
-    "    print(f\"Prediction for {img_path}: {predicted_gesture}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## **CNN Model: Deep from Scratch**"
    ]
   },
@@ -576,12 +528,14 @@
     "    model.add(layers.Conv2D(32, 3, padding='same', activation='relu'))\n",
     "    model.add(layers.BatchNormalization())\n",
     "    model.add(layers.MaxPooling2D())\n",
+    "    \n",
     "    model.add(layers.Conv2D(64, 3, padding='same', activation='relu'))\n",
     "    model.add(layers.BatchNormalization())\n",
     "    model.add(layers.MaxPooling2D())\n",
     "    model.add(layers.Conv2D(64, 3, padding='same', activation='relu'))\n",
     "    model.add(layers.BatchNormalization())\n",
     "    model.add(layers.MaxPooling2D())\n",
+    "    \n",
     "    model.add(layers.Conv2D(128, 3, padding='same', activation='relu',\n",
     "                            kernel_regularizer=regularizers.l2(0.001)))\n",
     "    model.add(layers.BatchNormalization())\n",
@@ -706,60 +660,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **CNN Model: Deep from Scratch Testing**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 0s 462ms/step\n",
-      "Prediction for myImages/three2.png: three2\n",
-      "1/1 [==============================] - 0s 19ms/step\n",
-      "Prediction for myImages/rock.png: rock\n",
-      "1/1 [==============================] - 0s 19ms/step\n",
-      "Prediction for myImages/ok.jpg: ok\n",
-      "1/1 [==============================] - 0s 19ms/step\n",
-      "Prediction for myImages/two_up_inverted.png: two_up_inverted\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Testing own images\n",
-    "def predict_gesture(model, img_path, class_names):\n",
-    "    img = image.load_img(img_path, target_size=(64, 64))\n",
-    "    img_array = image.img_to_array(img)\n",
-    "    img_array = tf.expand_dims(img_array, 0)  # Create batch dimension\n",
-    "\n",
-    "    predictions = model.predict(img_array)\n",
-    "    predicted_class = class_names[np.argmax(predictions)]\n",
-    "    return predicted_class\n",
-    "\n",
-    "gesture_images = ['myImages/three2.png',\n",
-    "                  'myImages/rock.png',\n",
-    "                  'myImages/ok.jpg',\n",
-    "                  'myImages/two_up_inverted.png']\n",
-    "\n",
-    "for img_path in gesture_images:\n",
-    "    predicted_gesture = predict_gesture(scratch_model_deep, img_path, class_names)\n",
-    "    print(f\"Prediction for {img_path}: {predicted_gesture}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## **CNN Model: Data Augmentation**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,80 +678,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_3\"\n",
+      "Model: \"sequential_7\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " sequential_2 (Sequential)   (None, 64, 64, 3)         0         \n",
+      " sequential_6 (Sequential)   (None, 64, 64, 3)         0         \n",
       "                                                                 \n",
-      " rescaling_2 (Rescaling)     (None, 64, 64, 3)         0         \n",
+      " rescaling_5 (Rescaling)     (None, 64, 64, 3)         0         \n",
       "                                                                 \n",
-      " conv2d_9 (Conv2D)           (None, 64, 64, 32)        896       \n",
+      " conv2d_21 (Conv2D)          (None, 64, 64, 32)        896       \n",
       "                                                                 \n",
-      " batch_normalization_9 (Batc  (None, 64, 64, 32)       128       \n",
-      " hNormalization)                                                 \n",
-      "                                                                 \n",
-      " max_pooling2d_9 (MaxPooling  (None, 32, 32, 32)       0         \n",
-      " 2D)                                                             \n",
-      "                                                                 \n",
-      " conv2d_10 (Conv2D)          (None, 32, 32, 32)        9248      \n",
-      "                                                                 \n",
-      " batch_normalization_10 (Bat  (None, 32, 32, 32)       128       \n",
+      " batch_normalization_19 (Bat  (None, 64, 64, 32)       128       \n",
       " chNormalization)                                                \n",
       "                                                                 \n",
-      " max_pooling2d_10 (MaxPoolin  (None, 16, 16, 32)       0         \n",
+      " max_pooling2d_21 (MaxPoolin  (None, 32, 32, 32)       0         \n",
       " g2D)                                                            \n",
       "                                                                 \n",
-      " conv2d_11 (Conv2D)          (None, 16, 16, 64)        18496     \n",
+      " conv2d_22 (Conv2D)          (None, 32, 32, 32)        9248      \n",
       "                                                                 \n",
-      " batch_normalization_11 (Bat  (None, 16, 16, 64)       256       \n",
+      " batch_normalization_20 (Bat  (None, 32, 32, 32)       128       \n",
       " chNormalization)                                                \n",
       "                                                                 \n",
-      " max_pooling2d_11 (MaxPoolin  (None, 8, 8, 64)         0         \n",
+      " max_pooling2d_22 (MaxPoolin  (None, 16, 16, 32)       0         \n",
       " g2D)                                                            \n",
       "                                                                 \n",
-      " conv2d_12 (Conv2D)          (None, 8, 8, 64)          36928     \n",
+      " conv2d_23 (Conv2D)          (None, 16, 16, 64)        18496     \n",
       "                                                                 \n",
-      " batch_normalization_12 (Bat  (None, 8, 8, 64)         256       \n",
+      " batch_normalization_21 (Bat  (None, 16, 16, 64)       256       \n",
       " chNormalization)                                                \n",
       "                                                                 \n",
-      " max_pooling2d_12 (MaxPoolin  (None, 4, 4, 64)         0         \n",
+      " max_pooling2d_23 (MaxPoolin  (None, 8, 8, 64)         0         \n",
       " g2D)                                                            \n",
       "                                                                 \n",
-      " conv2d_13 (Conv2D)          (None, 4, 4, 128)         73856     \n",
+      " conv2d_24 (Conv2D)          (None, 8, 8, 64)          36928     \n",
       "                                                                 \n",
-      " batch_normalization_13 (Bat  (None, 4, 4, 128)        512       \n",
+      " batch_normalization_22 (Bat  (None, 8, 8, 64)         256       \n",
       " chNormalization)                                                \n",
       "                                                                 \n",
-      " max_pooling2d_13 (MaxPoolin  (None, 2, 2, 128)        0         \n",
+      " max_pooling2d_24 (MaxPoolin  (None, 4, 4, 64)         0         \n",
       " g2D)                                                            \n",
       "                                                                 \n",
-      " dropout_4 (Dropout)         (None, 2, 2, 128)         0         \n",
+      " conv2d_25 (Conv2D)          (None, 4, 4, 128)         73856     \n",
       "                                                                 \n",
-      " conv2d_14 (Conv2D)          (None, 2, 2, 128)         147584    \n",
-      "                                                                 \n",
-      " batch_normalization_14 (Bat  (None, 2, 2, 128)        512       \n",
+      " batch_normalization_23 (Bat  (None, 4, 4, 128)        512       \n",
       " chNormalization)                                                \n",
       "                                                                 \n",
-      " max_pooling2d_14 (MaxPoolin  (None, 1, 1, 128)        0         \n",
+      " max_pooling2d_25 (MaxPoolin  (None, 2, 2, 128)        0         \n",
       " g2D)                                                            \n",
       "                                                                 \n",
-      " dropout_5 (Dropout)         (None, 1, 1, 128)         0         \n",
+      " dropout_9 (Dropout)         (None, 2, 2, 128)         0         \n",
       "                                                                 \n",
-      " flatten_2 (Flatten)         (None, 128)               0         \n",
+      " conv2d_26 (Conv2D)          (None, 2, 2, 128)         147584    \n",
       "                                                                 \n",
-      " dense_4 (Dense)             (None, 128)               16512     \n",
+      " batch_normalization_24 (Bat  (None, 2, 2, 128)        512       \n",
+      " chNormalization)                                                \n",
       "                                                                 \n",
-      " dropout_6 (Dropout)         (None, 128)               0         \n",
+      " max_pooling2d_26 (MaxPoolin  (None, 1, 1, 128)        0         \n",
+      " g2D)                                                            \n",
       "                                                                 \n",
-      " dense_5 (Dense)             (None, 18)                2322      \n",
+      " dropout_10 (Dropout)        (None, 1, 1, 128)         0         \n",
+      "                                                                 \n",
+      " flatten_5 (Flatten)         (None, 128)               0         \n",
+      "                                                                 \n",
+      " dense_7 (Dense)             (None, 128)               16512     \n",
+      "                                                                 \n",
+      " dropout_11 (Dropout)        (None, 128)               0         \n",
+      "                                                                 \n",
+      " dense_8 (Dense)             (None, 18)                2322      \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 307,634\n",
@@ -905,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -913,25 +819,25 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "2754/2754 [==============================] - 305s 110ms/step - loss: 2.8940 - accuracy: 0.1170 - val_loss: 2.5491 - val_accuracy: 0.2025\n",
+      "2754/2754 [==============================] - 451s 163ms/step - loss: 2.8682 - accuracy: 0.1280 - val_loss: 2.2481 - val_accuracy: 0.3042\n",
       "Epoch 2/10\n",
-      "2754/2754 [==============================] - 307s 111ms/step - loss: 2.0872 - accuracy: 0.3771 - val_loss: 1.5178 - val_accuracy: 0.6123\n",
+      "2754/2754 [==============================] - 527s 191ms/step - loss: 2.0021 - accuracy: 0.4070 - val_loss: 1.6024 - val_accuracy: 0.5705\n",
       "Epoch 3/10\n",
-      "2754/2754 [==============================] - 306s 111ms/step - loss: 1.5462 - accuracy: 0.5936 - val_loss: 1.4807 - val_accuracy: 0.6397\n",
+      "2754/2754 [==============================] - 311s 113ms/step - loss: 1.5182 - accuracy: 0.6055 - val_loss: 1.1555 - val_accuracy: 0.7275\n",
       "Epoch 4/10\n",
-      "2754/2754 [==============================] - 302s 110ms/step - loss: 1.3161 - accuracy: 0.6779 - val_loss: 1.0757 - val_accuracy: 0.7542\n",
+      "2754/2754 [==============================] - 309s 112ms/step - loss: 1.3078 - accuracy: 0.6843 - val_loss: 1.0098 - val_accuracy: 0.7791\n",
       "Epoch 5/10\n",
-      "2754/2754 [==============================] - 299s 109ms/step - loss: 1.1897 - accuracy: 0.7224 - val_loss: 1.0930 - val_accuracy: 0.7459\n",
+      "2754/2754 [==============================] - 324s 118ms/step - loss: 1.1945 - accuracy: 0.7219 - val_loss: 0.9408 - val_accuracy: 0.7984\n",
       "Epoch 6/10\n",
-      "2754/2754 [==============================] - 301s 109ms/step - loss: 1.1184 - accuracy: 0.7465 - val_loss: 1.0134 - val_accuracy: 0.7724\n",
+      "2754/2754 [==============================] - 310s 112ms/step - loss: 1.1172 - accuracy: 0.7462 - val_loss: 0.9711 - val_accuracy: 0.7854\n",
       "Epoch 7/10\n",
-      "2754/2754 [==============================] - 301s 109ms/step - loss: 1.0543 - accuracy: 0.7632 - val_loss: 0.8609 - val_accuracy: 0.8180\n",
+      "2754/2754 [==============================] - 310s 113ms/step - loss: 1.0651 - accuracy: 0.7613 - val_loss: 0.8926 - val_accuracy: 0.8108\n",
       "Epoch 8/10\n",
-      "2754/2754 [==============================] - 299s 109ms/step - loss: 1.0094 - accuracy: 0.7785 - val_loss: 0.8721 - val_accuracy: 0.8162\n",
+      "2754/2754 [==============================] - 313s 114ms/step - loss: 1.0166 - accuracy: 0.7771 - val_loss: 0.8671 - val_accuracy: 0.8177\n",
       "Epoch 9/10\n",
-      "2754/2754 [==============================] - 300s 109ms/step - loss: 0.9831 - accuracy: 0.7865 - val_loss: 0.7841 - val_accuracy: 0.8446\n",
+      "2754/2754 [==============================] - 309s 112ms/step - loss: 0.9945 - accuracy: 0.7820 - val_loss: 0.9734 - val_accuracy: 0.7853\n",
       "Epoch 10/10\n",
-      "2754/2754 [==============================] - 301s 109ms/step - loss: 0.9532 - accuracy: 0.7949 - val_loss: 0.8245 - val_accuracy: 0.8315\n"
+      "2754/2754 [==============================] - 311s 113ms/step - loss: 0.9683 - accuracy: 0.7924 - val_loss: 0.8268 - val_accuracy: 0.8292\n"
      ]
     }
    ],
@@ -947,13 +853,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# First, ensure that 'history_light' is the History object returned from model.fit()\n",
-    "# Assuming 'history_light' is a History object returned by the fit method\n",
-    "\n",
     "# Convert any numpy types to Python lists\n",
     "for key in history_da.history.keys():\n",
     "    history_da.history[key] = [float(i) for i in history_da.history[key]]\n",
@@ -972,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -982,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
