--- a/CNN-Models-Evaluations.ipynb
+++ b/CNN-Models-Evaluations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,20 +239,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 86ms/step\n",
+      "1/1 [==============================] - 4s 4s/step\n",
       "Prediction for myImages/three2.png: three2\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
+      "1/1 [==============================] - 0s 21ms/step\n",
       "Prediction for myImages/rock.png: rock\n",
-      "1/1 [==============================] - 0s 17ms/step\n",
+      "1/1 [==============================] - 0s 20ms/step\n",
       "Prediction for myImages/ok.jpg: call\n",
-      "1/1 [==============================] - 0s 18ms/step\n",
+      "1/1 [==============================] - 0s 20ms/step\n",
       "Prediction for myImages/two_up_inverted.png: two_up_inverted\n"
      ]
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,8 +293,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **CNN Model: Light from Scratch Inference**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +309,7 @@
      "output_type": "stream",
      "text": [
       "394/394 [==============================] - 2s 4ms/step - loss: 0.6985 - accuracy: 0.7830\n",
-      "Inference Time: 2.199 seconds\n"
+      "Inference Time: 2.057 seconds\n"
      ]
     }
    ],
