--- a/CNN-Models.ipynb
+++ b/CNN-Models.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,8 +56,10 @@
     "from tensorflow.keras.layers import RandomZoom, RandomRotation, RandomFlip, Rescaling, Conv2D, MaxPooling2D, Flatten, Dense, Dropout, BatchNormalization, GlobalAveragePooling2D\n",
     "from sklearn.model_selection import train_test_split\n",
     "from tensorflow.keras.preprocessing import image\n",
+    "from tensorflow.keras.applications.vgg16 import preprocess_input\n",
     "from PIL import Image\n",
     "from tensorflow.keras.callbacks import ReduceLROnPlateau, EarlyStopping\n",
+    "from tensorflow.keras.applications import VGG16\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import os\n",
@@ -76,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +244,7 @@
        " 'two_up_inverted']"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1420,86 +1422,123 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **CNN Model: Combined**"
+    "# **CNN Model: Transfer Learning VGG-16**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IMAGE_SIZE_TL = (64, 64)\n",
+    "inputs = tf.keras.Input(shape=(IMAGE_SIZE_TL[0], IMAGE_SIZE_TL[1],3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_transferlearning = tf.keras.applications.VGG16(\n",
+    "    weights='imagenet',  # Load weights pre-trained on ImageNet.\n",
+    "    input_shape=(IMAGE_SIZE_TL[0], IMAGE_SIZE_TL[1],3),\n",
+    "    include_top=False)\n",
+    "\n",
+    "model_transferlearning.trainable = False\n",
+    "x = data_augmentation_layers(inputs)\n",
+    "x = tf.keras.applications.vgg16.preprocess_input(x)\n",
+    "x = model_transferlearning(x, training=False)\n",
+    "x = tf.keras.layers.GlobalAveragePooling2D()(x)\n",
+    "x = tf.keras.layers.Dropout(0.2)(x)\n",
+    "outputs = tf.keras.layers.Dense(num_classes)(x)\n",
+    "modeltf = tf.keras.Model(inputs, outputs)\n",
+    "\n",
+    "modeltf.compile(\n",
+    "                  optimizer='adam',\n",
+    "                  loss=tf.keras.losses.CategoricalCrossentropy(from_logits=False),\n",
+    "                  metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'tensorflow.keras.layers' has no attribute 'data_augmentation_layers'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[90], line 49\u001b[0m\n\u001b[0;32m     46\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m model\n\u001b[0;32m     48\u001b[0m \u001b[38;5;66;03m# Build and summarize the combined model\u001b[39;00m\n\u001b[1;32m---> 49\u001b[0m combined_model \u001b[38;5;241m=\u001b[39m \u001b[43mbuild_combined_cnn\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     50\u001b[0m combined_model\u001b[38;5;241m.\u001b[39msummary()\n",
-      "Cell \u001b[1;32mIn[90], line 25\u001b[0m, in \u001b[0;36mbuild_combined_cnn\u001b[1;34m()\u001b[0m\n\u001b[0;32m     22\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m x\n\u001b[0;32m     24\u001b[0m \u001b[38;5;66;03m# Process both inputs through shared layers\u001b[39;00m\n\u001b[1;32m---> 25\u001b[0m rgb_features \u001b[38;5;241m=\u001b[39m \u001b[43mshared_conv_layers\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrgb_rescale\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     26\u001b[0m grayscale_features \u001b[38;5;241m=\u001b[39m shared_conv_layers(grayscale_rescale)\n\u001b[0;32m     28\u001b[0m \u001b[38;5;66;03m# Concatenate the features from both branches\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[90], line 14\u001b[0m, in \u001b[0;36mbuild_combined_cnn.<locals>.shared_conv_layers\u001b[1;34m(input_layer)\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mshared_conv_layers\u001b[39m(input_layer):\n\u001b[1;32m---> 14\u001b[0m     x \u001b[38;5;241m=\u001b[39m \u001b[43mlayers\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdata_augmentation_layers\u001b[49m(input_layer)\n\u001b[0;32m     15\u001b[0m     x \u001b[38;5;241m=\u001b[39m layers\u001b[38;5;241m.\u001b[39mConv2D(\u001b[38;5;241m32\u001b[39m, \u001b[38;5;241m3\u001b[39m, padding\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msame\u001b[39m\u001b[38;5;124m'\u001b[39m, activation\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrelu\u001b[39m\u001b[38;5;124m'\u001b[39m)(input_layer)\n\u001b[0;32m     16\u001b[0m     x \u001b[38;5;241m=\u001b[39m layers\u001b[38;5;241m.\u001b[39mBatchNormalization()(x)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'tensorflow.keras.layers' has no attribute 'data_augmentation_layers'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "2754/2754 [==============================] - 343s 124ms/step - loss: 4.9702 - accuracy: 0.2334 - val_loss: 2.5204 - val_accuracy: 0.3194\n",
+      "Epoch 2/10\n",
+      "2754/2754 [==============================] - 338s 123ms/step - loss: 2.8979 - accuracy: 0.2610 - val_loss: 2.5403 - val_accuracy: 0.3126\n",
+      "Epoch 3/10\n",
+      "2754/2754 [==============================] - 338s 123ms/step - loss: 2.9095 - accuracy: 0.2607 - val_loss: 2.5645 - val_accuracy: 0.3131\n",
+      "Epoch 4/10\n",
+      "2754/2754 [==============================] - 339s 123ms/step - loss: 2.9163 - accuracy: 0.2592 - val_loss: 2.4888 - val_accuracy: 0.3204\n",
+      "Epoch 5/10\n",
+      "2754/2754 [==============================] - 340s 123ms/step - loss: 2.9028 - accuracy: 0.2616 - val_loss: 2.5910 - val_accuracy: 0.3095\n",
+      "Epoch 6/10\n",
+      "2754/2754 [==============================] - 340s 123ms/step - loss: 2.9076 - accuracy: 0.2597 - val_loss: 2.5395 - val_accuracy: 0.3170\n",
+      "Epoch 7/10\n",
+      "2754/2754 [==============================] - 338s 123ms/step - loss: 2.9011 - accuracy: 0.2613 - val_loss: 2.5130 - val_accuracy: 0.3174\n"
      ]
     }
    ],
    "source": [
-    "# Function to build a combined CNN model\n",
-    "def build_combined_cnn():\n",
-    "    # Input for RGB images\n",
-    "    rgb_input = tf.keras.Input(shape=(IMG_SIZE[0], IMG_SIZE[1], 3), name='rgb_input')\n",
-    "    rgb_aug = data_augmentation_layers(rgb_input)\n",
-    "    rgb_rescale = layers.Rescaling(1.0 / 255)(rgb_aug)\n",
+    "historytf = modeltf.fit(\n",
+    "    train_ds,  \n",
+    "    validation_data=(val_ds), \n",
+    "    epochs=10, \n",
+    "    callbacks=[tf.keras.callbacks.EarlyStopping(monitor='val_loss', patience=3, restore_best_weights=True)]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert any numpy types to Python lists\n",
+    "for key in historytf.history.keys():\n",
+    "    historytf.history[key] = [float(i) for i in historytf.history[key]]\n",
     "\n",
-    "    # Input for Grayscale images\n",
-    "    grayscale_input = tf.keras.Input(shape=(IMG_SIZE[0], IMG_SIZE[1], 1), name='grayscale_input')\n",
-    "    grayscale_rescale = layers.Rescaling(1.0 / 255)(grayscale_input)\n",
+    "# Write the JSON file\n",
+    "with open('cnn_model_vgg16.json', 'w') as f:\n",
+    "    json.dump(historytf.history, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the Deep CNN Model\n",
+    "modeltf.save('model_vgg16.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the model\n",
+    "from tensorflow.keras.models import load_model\n",
     "\n",
-    "    # Shared convolutional processing\n",
-    "    def shared_conv_layers(input_layer):\n",
-    "        x = layers.data_augmentation_layers(input_layer)\n",
-    "        x = layers.Conv2D(32, 3, padding='same', activation='relu')(input_layer)\n",
-    "        x = layers.BatchNormalization()(x)\n",
-    "        x = layers.MaxPooling2D()(x)\n",
-    "        x = layers.Conv2D(64, 3, padding='same', activation='relu')(x)\n",
-    "        x = layers.BatchNormalization()(x)\n",
-    "        x = layers.MaxPooling2D()(x)\n",
-    "        x = layers.Flatten()(x)\n",
-    "        return x\n",
-    "\n",
-    "    # Process both inputs through shared layers\n",
-    "    rgb_features = shared_conv_layers(rgb_rescale)\n",
-    "    grayscale_features = shared_conv_layers(grayscale_rescale)\n",
-    "\n",
-    "    # Concatenate the features from both branches\n",
-    "    combined_features = layers.Concatenate()([rgb_features, grayscale_features])\n",
-    "\n",
-    "    # Fully connected layers\n",
-    "    x = layers.Dense(128, activation='relu')(combined_features)\n",
-    "    x = layers.Dropout(0.5)(x)\n",
-    "    output = layers.Dense(num_classes, activation='softmax')(x)\n",
-    "\n",
-    "    # Create the model\n",
-    "    model = models.Model(inputs=[rgb_input, grayscale_input], outputs=output)\n",
-    "\n",
-    "    # Compile the model\n",
-    "    model.compile(\n",
-    "        optimizer='adam',\n",
-    "        loss=tf.keras.losses.CategoricalCrossentropy(from_logits=False),\n",
-    "        metrics=['accuracy']\n",
-    "    )\n",
-    "\n",
-    "    return model\n",
-    "\n",
-    "# Build and summarize the combined model\n",
-    "combined_model = build_combined_cnn()\n",
-    "combined_model.summary()"
+    "# Load the model from the .h5 file\n",
+    "modeltf = load_model('cnn_model_vgg16.h5')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Transfer Learning VGG-16**"
+    "# **Camera**"
    ]
   },
   {
