--- a/CNN-Models.ipynb
+++ b/CNN-Models.ipynb
@@ -715,6 +715,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert any numpy types to Python lists\n",
+    "for key in history_light_tuned.history.keys():\n",
+    "    history_light_tuned.history[key] = [float(i) for i in history_light_tuned.history[key]]\n",
+    "\n",
+    "# Write the JSON file\n",
+    "with open('cnn_model_light_tuned.json', 'w') as f:\n",
+    "    json.dump(history_light_tuned.history, f)\n",
+    "\n",
+    "# Save the Deep CNN Model\n",
+    "scratch_model_light_tuned.save('scratch_model_light.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
