data augmentation model trained and saved

--- a/CNN-Models.ipynb
+++ b/CNN-Models.ipynb
@@ -1144,13 +1144,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert any numpy types to Python lists\n",
+    "# Save Model: .json\n",
     "for key in history_light.history.keys():\n",
     "    history_light.history[key] = [float(i) for i in history_light.history[key]]\n",
     "\n",
     "# Write the JSON file\n",
     "with open('cnn_model_light.json', 'w') as f:\n",
-    "    json.dump(history_light.history, f)"
+    "    json.dump(history_light.history, f)\n",
+    "\n",
+    "\n",
+    "# Save Model: .h5\n",
+    "scratch_model_light.save('scratch_model_light.h5')"
    ]
   },
   {
