--- a/project_deep_models.ipynb
+++ b/project_deep_models.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,9 +51,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.10.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Tensorflow Version\n",
     "print(tf.__version__)"
@@ -68,9 +76,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPUs detected: 1\n"
+     ]
+    }
+   ],
    "source": [
     "# Check if any GPU devices are detected\n",
     "gpus = tf.config.list_physical_devices('GPU')\n",
@@ -89,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,9 +145,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 125912 files belonging to 18 classes.\n",
+      "Using 88128 samples in the Training set\n",
+      "Using 25184 samples in the Validation set\n",
+      "Using 12600 samples in the Test set\n"
+     ]
+    }
+   ],
    "source": [
     "# Load Dataset\n",
     "dataset_dir = 'dataset/hagridset'\n",
@@ -180,9 +207,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['call',\n",
+       " 'dislike',\n",
+       " 'fist',\n",
+       " 'four',\n",
+       " 'like',\n",
+       " 'mute',\n",
+       " 'ok',\n",
+       " 'one',\n",
+       " 'palm',\n",
+       " 'peace',\n",
+       " 'peace_inverted',\n",
+       " 'rock',\n",
+       " 'stop',\n",
+       " 'stop_inverted',\n",
+       " 'three',\n",
+       " 'three2',\n",
+       " 'two_up',\n",
+       " 'two_up_inverted']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Get class names\n",
     "class_names = full_ds.class_names\n",
@@ -200,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,14 +341,275 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_1\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " rescaling (Rescaling)       (None, 64, 64, 3)         0         \n",
+      "                                                                 \n",
+      " conv2d (Conv2D)             (None, 64, 64, 16)        448       \n",
+      "                                                                 \n",
+      " batch_normalization (BatchN  (None, 64, 64, 16)       64        \n",
+      " ormalization)                                                   \n",
+      "                                                                 \n",
+      " max_pooling2d (MaxPooling2D  (None, 32, 32, 16)       0         \n",
+      " )                                                               \n",
+      "                                                                 \n",
+      " dropout (Dropout)           (None, 32, 32, 16)        0         \n",
+      "                                                                 \n",
+      " conv2d_1 (Conv2D)           (None, 32, 32, 32)        4640      \n",
+      "                                                                 \n",
+      " batch_normalization_1 (Batc  (None, 32, 32, 32)       128       \n",
+      " hNormalization)                                                 \n",
+      "                                                                 \n",
+      " max_pooling2d_1 (MaxPooling  (None, 16, 16, 32)       0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " dropout_1 (Dropout)         (None, 16, 16, 32)        0         \n",
+      "                                                                 \n",
+      " conv2d_2 (Conv2D)           (None, 16, 16, 64)        18496     \n",
+      "                                                                 \n",
+      " batch_normalization_2 (Batc  (None, 16, 16, 64)       256       \n",
+      " hNormalization)                                                 \n",
+      "                                                                 \n",
+      " max_pooling2d_2 (MaxPooling  (None, 8, 8, 64)         0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " dropout_2 (Dropout)         (None, 8, 8, 64)          0         \n",
+      "                                                                 \n",
+      " conv2d_3 (Conv2D)           (None, 8, 8, 128)         73856     \n",
+      "                                                                 \n",
+      " batch_normalization_3 (Batc  (None, 8, 8, 128)        512       \n",
+      " hNormalization)                                                 \n",
+      "                                                                 \n",
+      " max_pooling2d_3 (MaxPooling  (None, 4, 4, 128)        0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " dropout_3 (Dropout)         (None, 4, 4, 128)         0         \n",
+      "                                                                 \n",
+      " conv2d_4 (Conv2D)           (None, 4, 4, 256)         295168    \n",
+      "                                                                 \n",
+      " batch_normalization_4 (Batc  (None, 4, 4, 256)        1024      \n",
+      " hNormalization)                                                 \n",
+      "                                                                 \n",
+      " max_pooling2d_4 (MaxPooling  (None, 2, 2, 256)        0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " dropout_4 (Dropout)         (None, 2, 2, 256)         0         \n",
+      "                                                                 \n",
+      " conv2d_5 (Conv2D)           (None, 2, 2, 512)         1180160   \n",
+      "                                                                 \n",
+      " batch_normalization_5 (Batc  (None, 2, 2, 512)        2048      \n",
+      " hNormalization)                                                 \n",
+      "                                                                 \n",
+      " max_pooling2d_5 (MaxPooling  (None, 1, 1, 512)        0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " dropout_5 (Dropout)         (None, 1, 1, 512)         0         \n",
+      "                                                                 \n",
+      " flatten (Flatten)           (None, 512)               0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 18)                9234      \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 1,586,034\n",
+      "Trainable params: 1,584,018\n",
+      "Non-trainable params: 2,016\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the CNN Model from Scratch\n",
+    "def build_scratch_cnn_deep():\n",
+    "    model = models.Sequential()\n",
+    "    model.add(tf.keras.Input(shape=(IMG_SIZE[0], IMG_SIZE[1], 3)))\n",
+    "    model.add(layers.Rescaling(1.0 / 255))  # Normalize pixel values\n",
+    "    \n",
+    "    model.add(layers.Conv2D(16, 3, padding='same', activation='relu'))  \n",
+    "    model.add(layers.BatchNormalization())\n",
+    "    model.add(layers.MaxPooling2D())\n",
+    "    model.add(layers.Dropout(0.1))\n",
+    "    model.add(layers.Conv2D(32, 3, padding='same', activation='relu'))  \n",
+    "    model.add(layers.BatchNormalization())\n",
+    "    model.add(layers.MaxPooling2D())\n",
+    "    model.add(layers.Dropout(0.1))\n",
+    "    \n",
+    "    model.add(layers.Conv2D(64, 3, padding='same', activation='relu'))  \n",
+    "    model.add(layers.BatchNormalization())\n",
+    "    model.add(layers.MaxPooling2D())\n",
+    "    model.add(layers.Dropout(0.1))\n",
+    "    model.add(layers.Conv2D(128, 3, padding='same', activation='relu'))  \n",
+    "    model.add(layers.BatchNormalization())\n",
+    "    model.add(layers.MaxPooling2D())\n",
+    "    model.add(layers.Dropout(0.1))\n",
+    "\n",
+    "    model.add(layers.Conv2D(256, 3, padding='same', activation='relu'))  \n",
+    "    model.add(layers.BatchNormalization())\n",
+    "    model.add(layers.MaxPooling2D())\n",
+    "    model.add(layers.Dropout(0.1))\n",
+    "    model.add(layers.Conv2D(512, 3, padding='same', activation='relu'))  \n",
+    "    model.add(layers.BatchNormalization())\n",
+    "    model.add(layers.MaxPooling2D())\n",
+    "    model.add(layers.Dropout(0.1))\n",
+    "    \n",
+    "    model.add(layers.Flatten())\n",
+    "\n",
+    "    model.add(layers.Dense(num_classes, activation='softmax'))\n",
+    "\n",
+    "    # Compile model with an initial learning rate\n",
+    "    model.compile(\n",
+    "        # Adam optimizer is used with a specified initial learning rate of 0.001. The learning rate\n",
+    "        # controls how much the weights of the model are adjusted relative to the gradient of the loss \n",
+    "        # function. A higher learning rate might converge quickly, but too high can cause the training \n",
+    "        # to diverge. A lower learning rate ensures more reliable convergence but at the risk of slowing\n",
+    "        # down the training process. The chosen rate of 0.001 is a starting point that balances these factors.\n",
+    "        optimizer=tf.keras.optimizers.Adam(learning_rate=0.001),\n",
+    "        loss='categorical_crossentropy',\n",
+    "        metrics=['accuracy']\n",
+    "        )\n",
+    "    return model\n",
+    "\n",
+    "# Instantiate and summarize the lighter model\n",
+    "scratch_model_deep = build_scratch_cnn_deep()\n",
+    "scratch_model_deep.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **CNN Model: Deep Training**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch 1: LearningRateScheduler setting learning rate to 0.0010000000474974513.\n",
+      "Epoch 1/10\n",
+      "2754/2754 [==============================] - 35s 11ms/step - loss: 1.8387 - accuracy: 0.4356 - val_loss: 1.0170 - val_accuracy: 0.6740 - lr: 0.0010\n",
+      "\n",
+      "Epoch 2: LearningRateScheduler setting learning rate to 0.0009900990569281696.\n",
+      "Epoch 2/10\n",
+      "2754/2754 [==============================] - 29s 11ms/step - loss: 0.8499 - accuracy: 0.7244 - val_loss: 0.7453 - val_accuracy: 0.7651 - lr: 9.9010e-04\n",
+      "\n",
+      "Epoch 3: LearningRateScheduler setting learning rate to 0.0009706853341092082.\n",
+      "Epoch 3/10\n",
+      "2754/2754 [==============================] - 29s 11ms/step - loss: 0.6322 - accuracy: 0.7961 - val_loss: 0.5349 - val_accuracy: 0.8281 - lr: 9.7069e-04\n",
+      "\n",
+      "Epoch 4: LearningRateScheduler setting learning rate to 0.0009424129424128428.\n",
+      "Epoch 4/10\n",
+      "2754/2754 [==============================] - 30s 11ms/step - loss: 0.5185 - accuracy: 0.8295 - val_loss: 0.5049 - val_accuracy: 0.8401 - lr: 9.4241e-04\n",
+      "\n",
+      "Epoch 5: LearningRateScheduler setting learning rate to 0.0009061662869778676.\n",
+      "Epoch 5/10\n",
+      "2754/2754 [==============================] - 29s 11ms/step - loss: 0.4422 - accuracy: 0.8547 - val_loss: 0.4442 - val_accuracy: 0.8586 - lr: 9.0617e-04\n",
+      "\n",
+      "Epoch 6: LearningRateScheduler setting learning rate to 0.0008630154964824517.\n",
+      "Epoch 6/10\n",
+      "2754/2754 [==============================] - 30s 11ms/step - loss: 0.3806 - accuracy: 0.8743 - val_loss: 0.4382 - val_accuracy: 0.8611 - lr: 8.6302e-04\n",
+      "\n",
+      "Epoch 7: LearningRateScheduler setting learning rate to 0.0008141655444149982.\n",
+      "Epoch 7/10\n",
+      "2754/2754 [==============================] - 30s 11ms/step - loss: 0.3316 - accuracy: 0.8892 - val_loss: 0.4098 - val_accuracy: 0.8689 - lr: 8.1417e-04\n",
+      "\n",
+      "Epoch 8: LearningRateScheduler setting learning rate to 0.000760902402591761.\n",
+      "Epoch 8/10\n",
+      "2754/2754 [==============================] - 30s 11ms/step - loss: 0.2890 - accuracy: 0.9034 - val_loss: 0.3781 - val_accuracy: 0.8862 - lr: 7.6090e-04\n",
+      "\n",
+      "Epoch 9: LearningRateScheduler setting learning rate to 0.0007045392757626595.\n",
+      "Epoch 9/10\n",
+      "2754/2754 [==============================] - 30s 11ms/step - loss: 0.2508 - accuracy: 0.9151 - val_loss: 0.3790 - val_accuracy: 0.8858 - lr: 7.0454e-04\n",
+      "\n",
+      "Epoch 10: LearningRateScheduler setting learning rate to 0.0006463663297953135.\n",
+      "Epoch 10/10\n",
+      "2754/2754 [==============================] - 30s 11ms/step - loss: 0.2206 - accuracy: 0.9251 - val_loss: 0.3926 - val_accuracy: 0.8821 - lr: 6.4637e-04\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train CNN Model\n",
+    "history_deep = scratch_model_deep.fit(\n",
+    "    train_ds,\n",
+    "    validation_data=val_ds,\n",
+    "    epochs=10,\n",
+    "    callbacks=callbacks\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **CNN Model: Deep Save**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save Model: .json\n",
+    "# Saves the Model Architecture\n",
+    "for key in history_deep.history.keys():\n",
+    "    history_deep.history[key] = [float(i) for i in history_deep.history[key]]\n",
+    "\n",
+    "# Write the JSON file\n",
+    "with open('json/cnn_model_deep.json', 'w') as f:\n",
+    "    json.dump(history_deep.history, f)\n",
+    "\n",
+    "\n",
+    "# Save Model: .h5\n",
+    "# Saves the Model Weights and Configurations\n",
+    "scratch_model_deep.save('h5/scratch_model_deep.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "py310new",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
