gitignore for datasets added. saving dataset

--- a/project_models.ipynb
+++ b/project_models.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -147,8 +147,7 @@
      "text": [
       "Found 125912 files belonging to 18 classes.\n",
       "Using 88128 samples in the Training set\n",
-      "Using 25184 samples in the Validation set\n",
-      "Using 12600 samples in the Test set\n"
+      "Using 25184 samples in the Validation set\n"
      ]
     }
    ],
@@ -241,7 +240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **Dataset: Save**"
+    "#### **Dataset: Shallow - Save**"
    ]
   },
   {
@@ -250,7 +249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_to_save = 'savedDataset'\n",
+    "path_to_save = 'savedDatasetShallowRGB'\n",
     "\n",
     "tf.data.experimental.save(train_ds, path_to_save + '/train')\n",
     "tf.data.experimental.save(val_ds, path_to_save + '/val')\n",
@@ -1022,6 +1021,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Dataset: Loading, Splitting, Shuffling, Caching**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -1056,7 +1062,7 @@
     "test_ratio_grayscale = 0.1\n",
     "\n",
     "# Total length of the dataset\n",
-    "total_size_grayscale = len(full_ds)\n",
+    "total_size_grayscale = len(full_ds_grayscale)\n",
     "\n",
     "# Compute indices for the splits\n",
     "train_size_grayscale = int(total_size_grayscale * train_ratio_grayscale)\n",
