gitignores for datasets added

--- a/project_models.ipynb
+++ b/project_models.ipynb
@@ -147,7 +147,8 @@
      "text": [
       "Found 125912 files belonging to 18 classes.\n",
       "Using 88128 samples in the Training set\n",
-      "Using 25184 samples in the Validation set\n"
+      "Using 25184 samples in the Validation set\n",
+      "Using 12600 samples in the Test set\n"
      ]
     }
    ],
