shallow vs deep comparison complete

--- a/ignore1.ipynb
+++ b/ignore1.ipynb
@@ -61,11 +61,11 @@
    "source": [
     "# Load the training history from the JSON file\n",
     "try:\n",
-    "    with open('cnn_model_light.json', 'r') as file:\n",
-    "        history_light = json.load(file)\n",
+    "    with open('cnn_model_shallow.json', 'r') as file:\n",
+    "        history_shallow = json.load(file)\n",
     "except FileNotFoundError:\n",
-    "    print(f\"Error: The file {'cnn_model_light.json'} does not exist.\")\n",
-    "    history_light = {}  # Assign an empty dictionary to prevent further errors if file is not found"
+    "    print(f\"Error: The file {'cnn_model_shallow.json'} does not exist.\")\n",
+    "    history_shallow = {}  # Assign an empty dictionary to prevent further errors if file is not found"
    ]
   },
   {
@@ -75,10 +75,10 @@
    "outputs": [],
    "source": [
     "# Access the history dictionary\n",
-    "acc = history_light['accuracy']\n",
-    "val_acc = history_light['val_accuracy']\n",
-    "loss = history_light['loss']\n",
-    "val_loss = history_light['val_loss']"
+    "acc = history_shallow['accuracy']\n",
+    "val_acc = history_shallow['val_accuracy']\n",
+    "loss = history_shallow['loss']\n",
+    "val_loss = history_shallow['val_loss']"
    ]
   },
   {
@@ -191,12 +191,12 @@
    "source": [
     "# Print the epoch-wise training and validation metrics\n",
     "print(\"Epoch-wise Training and Validation Accuracy:\")\n",
-    "for epoch in range(len(history_light['accuracy'])):\n",
+    "for epoch in range(len(history_shallow['accuracy'])):\n",
     "    print(f\"Epoch {epoch+1}:\")\n",
-    "    print(f\"    Training Accuracy: {history_light['accuracy'][epoch]}\")\n",
-    "    print(f\"    Validation Accuracy: {history_light['val_accuracy'][epoch]}\")\n",
-    "    print(f\"    Training Loss: {history_light['loss'][epoch]}\")\n",
-    "    print(f\"    Validation Loss: {history_light['val_loss'][epoch]}\")"
+    "    print(f\"    Training Accuracy: {history_shallow['accuracy'][epoch]}\")\n",
+    "    print(f\"    Validation Accuracy: {history_shallow['val_accuracy'][epoch]}\")\n",
+    "    print(f\"    Training Loss: {history_shallow['loss'][epoch]}\")\n",
+    "    print(f\"    Validation Loss: {history_shallow['val_loss'][epoch]}\")"
    ]
   },
   {
@@ -234,7 +234,7 @@
    "outputs": [],
    "source": [
     "# Load the model\n",
-    "scratch_model_light = load_model('scratch_model_light.h5')"
+    "scratch_model_shallow = load_model('scratch_model_light.h5')"
    ]
   },
   {
@@ -276,7 +276,7 @@
     "                  'myImages/two_up_inverted.png']\n",
     "\n",
     "for img_path in gesture_images:\n",
-    "    predicted_gesture = predict_gesture(scratch_model_light, img_path, class_names)\n",
+    "    predicted_gesture = predict_gesture(scratch_model_shallow, img_path, class_names)\n",
     "    print(f\"Prediction for {img_path}: {predicted_gesture}\")"
    ]
   },
